[fix] 보안 취약점 보완